syntax = "proto3";
package state.canister_metadata.v1;
import "types/v1/ic00_types.proto";
import "types/v1/types.proto";

message CanisterChangeFromUser {
    types.v1.PrincipalId user_id = 1;
}

message CanisterChangeFromCanister {
    types.v1.PrincipalId canister_id = 1;
    optional uint64 canister_version = 2;
}

message CanisterCreation {}

message CanisterCodeUninstall {}

message CanisterCodeDeployment {
    types.v1.CanisterInstallMode mode = 1;
    bytes module_hash = 2;
}

message CanisterControllersChange {
    repeated types.v1.PrincipalId controllers = 1;
}

message CanisterChange {
    uint64 timestamp_nanos = 1;
    uint64 canister_version = 2;
    oneof origin {
        CanisterChangeFromUser canister_change_from_user = 3;
        CanisterChangeFromCanister canister_change_from_canister = 4;
    }
    oneof change_details {
        CanisterCreation canister_creation = 5;
        CanisterCodeUninstall canister_code_uninstall = 6;
        CanisterCodeDeployment canister_code_deployment = 7;
        CanisterControllersChange canister_controllers_change = 8;
    }
}

message CanisterHistory {
    repeated CanisterChange changes = 1;
    uint64 total_num_changes = 2;
}

/// CanisterMetadata stores a collection of large but rarely mutated
/// canister metadata. The collection is a singleton now,
/// but we still define such a singleton collection to easily
/// add more such pieces of metadata in the future.
message CanisterMetadata {
    CanisterHistory canister_history = 1;
}
